[gd_scene load_steps=7 format=3 uid="uid://5j8rklfmops0"]

[ext_resource type="Script" path="res://pages/title/parallax_bg/parallax_bg.gd" id="1_8alvo"]
[ext_resource type="Texture2D" uid="uid://cof8kdg033oa4" path="res://pages/title/parallax_bg/hay_5.png" id="1_b6g57"]
[ext_resource type="Texture2D" uid="uid://cgfijobglbq8b" path="res://pages/title/parallax_bg/hay_4.png" id="2_87dh1"]
[ext_resource type="Texture2D" uid="uid://drdjkcu8ihbyr" path="res://pages/title/parallax_bg/hay_3.png" id="3_0cm3d"]
[ext_resource type="Texture2D" uid="uid://dyq3v85g8rymf" path="res://pages/title/parallax_bg/hay_2.png" id="4_ctsxs"]
[ext_resource type="Texture2D" uid="uid://dtunglydt6d7c" path="res://pages/title/parallax_bg/hay_1.png" id="5_7bs72"]

[node name="ParallaxBg" type="Node2D"]
script = ExtResource("1_8alvo")

[node name="Hay5" type="Node2D" parent="."]
position = Vector2(-125, -20)

[node name="Hay-5-1" type="Sprite2D" parent="Hay5"]
texture = ExtResource("1_b6g57")

[node name="Hay-5-2" type="Sprite2D" parent="Hay5"]
position = Vector2(4096, 0)
texture = ExtResource("1_b6g57")

[node name="Hay4" type="Node2D" parent="."]

[node name="Hay-4" type="Sprite2D" parent="Hay4"]
position = Vector2(0, 237)
texture = ExtResource("2_87dh1")

[node name="Hay-4-2" type="Sprite2D" parent="Hay4"]
position = Vector2(4096, 237)
texture = ExtResource("2_87dh1")

[node name="Hay3" type="Node2D" parent="."]

[node name="Hay-3" type="Sprite2D" parent="Hay3"]
position = Vector2(0, 279)
texture = ExtResource("3_0cm3d")

[node name="Hay-3-2" type="Sprite2D" parent="Hay3"]
position = Vector2(4096, 279)
texture = ExtResource("3_0cm3d")

[node name="Hay2" type="Node2D" parent="."]

[node name="Hay-2" type="Sprite2D" parent="Hay2"]
position = Vector2(0, 371)
texture = ExtResource("4_ctsxs")

[node name="Hay-2-2" type="Sprite2D" parent="Hay2"]
position = Vector2(4096, 371)
texture = ExtResource("4_ctsxs")

[node name="Hay1" type="Node2D" parent="."]

[node name="Hay-1" type="Sprite2D" parent="Hay1"]
position = Vector2(0, 428)
texture = ExtResource("5_7bs72")

[node name="Hay-1-2" type="Sprite2D" parent="Hay1"]
position = Vector2(4096, 428)
texture = ExtResource("5_7bs72")
